--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "nodemon server/server.js"
+    "server-prod": "node server/server.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
